[package]
name = "redis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atoi = "2.0.0"
bytes = "1.6.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.15"
tokio-util = { version = "0.7.10", features = ["io"] }
